<resources>
    <string name="app_name">ZCY</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="text_exit_app">再按一次退出</string>
    <string name="text_home">首页</string>
    <string name="text_shop">商铺</string>
    <string name="text_find">发现</string>
    <string name="text_person">我的</string>

    <string name="text_today_turnover">今日营业额</string>
    <string name="text_today_earning">今日收益</string>
    <string name="text_today_orders">今日订单</string>
    <string name="text_today_complaint">今日用户投诉</string>
</resources>
