<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:id="@+id/rl_navi_bottom"
    android:background="@color/tab_gray"
    >
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentTop="true"
        android:background="#50666666" />
    <RadioGroup
        android:id="@+id/rg_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <RadioButton
            style="@style/NaviBottom"
            android:id="@+id/rb_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:button="@null"
            android:gravity="center"
            android:layout_weight="0.25"
            android:padding="5dp"
            android:text="@string/text_home"/>
        <RadioButton
            style="@style/NaviBottom"
            android:id="@+id/rb_shop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:button="@null"
            android:gravity="center"
            android:layout_weight="0.25"
            android:padding="5dp"
            android:text="@string/text_shop"/>
        <RadioButton
            style="@style/NaviBottom"
            android:id="@+id/rb_find"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:button="@null"
            android:gravity="center"
            android:layout_weight="0.25"
            android:padding="5dp"
            android:text="@string/text_find"/>
        <RadioButton
            style="@style/NaviBottom"
            android:id="@+id/rb_person"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:button="@null"
            android:gravity="center"
            android:layout_weight="0.25"
            android:padding="5dp"
            android:text="@string/text_person"/>

    </RadioGroup>

</RelativeLayout>
