<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context="cn.amber.zxs.zcy.fragment.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="2dp"
            android:background="@color/gray_white">

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="1dp"
            android:background="@color/gray_white">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:background="@color/gray_white"
                android:orientation="horizontal">
                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    card_view:cardCornerRadius="2dp"
                    card_view:cardElevation="2dp"
                    android:layout_height="80dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/text_today_turnover"/>
                        <TextView
                            android:id="@+id/tv_today_turnover"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="$ 5000"/>
                    </LinearLayout>


                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    card_view:cardCornerRadius="2dp"
                    card_view:cardElevation="2dp"
                    android:layout_height="80dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/text_today_earning"/>
                        <TextView
                            android:id="@+id/tv_today_earning"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="$ 2000"/>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:background="@color/gray_white"
                android:orientation="horizontal">
                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    card_view:cardCornerRadius="2dp"
                    card_view:cardElevation="2dp"
                    android:layout_height="80dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <TextView
                        android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/text_today_orders"/>
                        <TextView
                            android:id="@+id/tv_today_orders"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="200 单"/>
                    </LinearLayout>


                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    card_view:cardCornerRadius="2dp"
                    card_view:cardElevation="2dp"
                    android:layout_height="80dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/text_today_complaint"/>

                        <TextView
                            android:id="@+id/tv_today_complaint"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="1 个"/>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

        </LinearLayout>


        <GridView
            android:id="@+id/gv_entry_page"
            android:layout_width="match_parent"
            android:background="@color/gray_white"
            android:paddingTop="20dp"
            android:scrollbars="none"
            android:verticalSpacing="20dp"
            android:horizontalSpacing="20dp"
            android:numColumns="4"
            android:gravity="center"
            android:layout_height="300dp">

        </GridView>


    </LinearLayout>

</ScrollView>
